cli/tests/snapshot/inputs/errors/include_multiple_with_def.ncl
# capture = 'stderr'
# command = ['eval']

let foo = {} in
{include foo, foo = {}}
